--- a/Named_Entity_Recognition_(NER)_.ipynb
+++ b/Named_Entity_Recognition_(NER)_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3GX6t4h0LXJo6Zqrn+Y9m",
+      "authorship_tag": "ABX9TyO2HxalqRaCvSenArNH6S7B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BqMRpMx2HzCC",
-        "outputId": "5275ef49-9b36-405f-d7a6-ca2465dbb313"
+        "outputId": "c44f803f-abd1-4af7-d3da-1508c7b8f9a7"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,31 +174,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aSo0Y43UIxfZ",
-        "outputId": "4fe036e5-fe3c-45cb-811b-698ef300a17f"
+        "outputId": "931506ae-5535-41ce-f950-2ddb3f0bf15c"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-            "[nltk_data]       date!\n",
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
             "[nltk_data] Downloading package maxent_ne_chunker to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n",
+            "[nltk_data]   Unzipping chunkers/maxent_ne_chunker.zip.\n",
             "[nltk_data] Downloading package words to /root/nltk_data...\n",
-            "[nltk_data]   Package words is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/words.zip.\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
-            "[nltk_data]       date!\n",
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n",
             "[nltk_data] Downloading package maxent_ne_chunker_tab to\n",
             "[nltk_data]     /root/nltk_data...\n",
             "[nltk_data]   Unzipping chunkers/maxent_ne_chunker_tab.zip.\n"
@@ -212,7 +210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 2
         }
       ]
     },
@@ -234,9 +232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xPa0KGpVI1cB",
-        "outputId": "4aeddd5a-c707-4cf7-b154-25fcf7486f3c"
+        "outputId": "981d3cf7-62f3-4922-cad3-6dbb93a3f83f"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Fb5GXtB2I-r5",
-        "outputId": "7a8eb79a-7411-489e-9c31-f527c19a5db9"
+        "outputId": "cf5112f1-f525-496a-a3b0-7118c4ee877c"
       },
       "execution_count": 4,
       "outputs": [
@@ -349,7 +347,7 @@
             "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.4.2->spacy) (2.0.1)\n",
             "Collecting en-core-web-sm==3.8.0\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m95.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m101.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('en_core_web_sm')\n",
             "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
@@ -379,7 +377,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7JoCgaWVJBb5",
-        "outputId": "f88d1fe6-a326-4198-9308-68f5fb918ba1"
+        "outputId": "235a7e12-f91c-4e5d-e929-cbd302ee9ab5"
       },
       "execution_count": 5,
       "outputs": [
@@ -409,51 +407,6 @@
       ],
       "metadata": {
         "id": "Psc2WZqPLSkW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "🚀 Exploring Named Entity Recognition (NER) in NLP\n",
-        "\n",
-        "Today, I worked on Named Entity Recognition (NER) — a core task in Natural Language Processing (NLP) that helps identify and classify real-world entities such as people, organizations, locations, dates, and more from raw text.\n",
-        "\n",
-        "In this mini-project, I implemented and compared three different NER approaches, moving from basics to industry-standard solutions:\n",
-        "\n",
-        "🔹 1. Rule-Based NER\n",
-        "• Uses regular expressions and linguistic rules\n",
-        "• Simple and fast\n",
-        "• Best for small, fixed patterns\n",
-        "\n",
-        "🔹 2. Machine Learning–Based NER (NLTK)\n",
-        "• Uses tokenization, POS tagging, and chunking\n",
-        "• Pretrained statistical models\n",
-        "• Better than rule-based, but limited context understanding\n",
-        "\n",
-        "🔹 3. Deep Learning–Based NER (spaCy)\n",
-        "• Uses neural networks and word embeddings\n",
-        "• Context-aware entity detection\n",
-        "• Widely used in real-world NLP applications\n",
-        "\n",
-        "🎯 This progression clearly shows how NER evolves from manual rules to powerful deep learning models.\n",
-        "\n",
-        "📹 I’ve shared a short demo video explaining the workflow and outputs step by step.\n",
-        "\n",
-        "🔗 Code link:\n",
-        "👉 [Paste your GitHub / Colab link here]\n",
-        "\n",
-        "#NLP\n",
-        "#NamedEntityRecognition\n",
-        "#MachineLearning\n",
-        "#DeepLearning\n",
-        "#spaCy\n",
-        "#NLTK\n",
-        "#Python\n",
-        "#AI\n",
-        "#LearningJourney"
-      ],
-      "metadata": {
-        "id": "rZXWZO36Ls9-"
       }
     }
   ]
